# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#  http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iotdb-client-rs"
version = "0.3.5"
authors = ["Mark Liu <manlge168@gmial.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Rust client library for Apache IoTDB"
keywords = ["iotdb", "iotdb-client-rust", "apache-iotdb"]
repository = "https://github.com/manlge/iotdb-client-rs.git"
categories = ["database"]
documentation = "https://docs.rs/iotdb-client-rs"

[lib]
name = "iotdb"

[dev-dependencies]
chrono="0.4.19"
prettytable-rs = "0.8.0"

[dependencies]
thrift="0.15.0"
permutation = "0.2.5"